[package]
name = "testSandcrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sandcrust= {git = "https://github.com/atopia/sandcrust"}
libc = "0.2"

[build-dependencies]
cc = "1.0"

[build]
# Build script to compile the C library
script = "build.rs"

